--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- Left: Contact Form -->
     <div class="w-full md:w-1/2">
       <h1 class="text-primary-green font-bold text-2xl sm:text-3xl mb-6">Get in touch with us!</h1>
-      <form action="#" class="space-y-5">
+      <form id="contactForm" class="space-y-5">
         <div>
           <label for="name" class="block text-gray-700 font-semibold mb-2">Name</label>
           <input 
@@ -195,6 +195,7 @@
           class="w-full md:w-2/5 lg:w-1/5 bg-primary-green text-white px-6 py-3 rounded-lg hover:bg-green-hover transition-all duration-200">
           Submit
         </button>
+        <p id="formStatus" class="mt-2 text-sm"></p>
       </form>
     </div>
 
@@ -213,8 +214,10 @@
 
 
    <!-- javascript file -->
-   <Script src="./js/services.js"></Script>
-    <Script src="./js/counter.js"></Script>
+  <Script src="./js/services.js"></Script>
+  <Script src="./js/counter.js"></Script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="./js/contactUS.js"></script>
 </body>
 
 </html>
