--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         </div>
       </div>
       <!-- image Section -->
-      <div class="w-full md:w-1/3 flex justify-center md:justify-end">
-        <img src="/images/hero-banner.png" alt="Hero Banner" class="w-full object-cover hero-image" />
+      <div class="w-full md:w-1/3 flex justify-center md:justify-end hero-image">
+        <img src="/images/hero-banner.png" alt="Hero Banner" class="w-full object-cover" />
       </div>
     </div>
   </section>
@@ -189,7 +189,7 @@
       </div>
 
       <!-- injecting service cards here throw javascript -->
-      <div id="service-cards" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+      <div id="service-cards" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 service-cards">
         <!-- Cards Will go here -->
       </div>
     </div>
@@ -229,7 +229,7 @@
     <div
       class="container max-w-screen-xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between gap-12 md:gap-16">
       <!-- Left: Contact Form -->
-      <div class="w-full md:w-1/2">
+      <div class="w-full md:w-1/2 contact-form">
         <h1 class="text-primary-green font-bold text-2xl sm:text-3xl mb-6">
           Get in touch with us!
         </h1>
@@ -262,7 +262,7 @@
 
       <!-- Right: Image -->
       <div class="w-full md:w-1/2 flex justify-center md:justify-end">
-        <img src="./images/contact.png" alt="Contact illustration" class="w-full rounded-2xl shadow-lg object-cover" />
+        <img src="./images/contact.png" alt="Contact illustration" class="w-full rounded-2xl shadow-lg object-cover contact-image" />
       </div>
     </div>
   </section>
@@ -335,12 +335,18 @@
     </div>
   </footer>
 
+
+  <!-- Scroll Reveal CDN -->
+  <script src="https://unpkg.com/scrollreveal"></script> 
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <!-- javascript file -->
   <script src="./js/services.js"></script>
   <script src="./js/counter.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script src="./js/contactUS.js"></script>
   <script src="./js/navbar.js"></script>
+  <script src="./js/animation.js"></script>
+
 </body>
 
 </html>
